--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <!-- Mirrored from fruitscones.neocities.org/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 16 Jun 2025 13:33:40 GMT -->
 <head> 
-<title> FruitScones </title>
+<title> LAST BID </title>
 <link rel="icon" type="image/x-icon" href="favi.gif">
 
 
